<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="app_name">Click n Travel</string>
    <string name="main_button_configuration">Configuration</string>
    <string name="main_button_myflights">My Flights</string>
    <string name="main_button_mydeals">My Deals</string>
    <string name="main_button_aboutus">About Us</string>
    <string name="title_activity_my_flights">My Flights</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="title_activity_my_deals">My Deals</string>
    <string name="search_hint">Search flights</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_deals">My Deals!</string>
    <string name="aboutus_text">Special Project for the Human Computer Interaction course taken in ITBA.\nThe design and programming was done by:</string>
    <string name="names"> Lori, Tomás (52558)\nRomarion, Germán Rodrigo (51296)\nZanzotti, Gabriel Andrés (52067)\nMamani, Betina Cynthia (52310)</string>
    <string name="notifications">Notify changes in...</string>
    <string name="frequency">Notification Frequency</string>
    <string name="menu_settings">Configuration</string>
    <string name="config_freq_summary">Choose Notification Frequency</string>
    <string name="config_freq">Notification Frequency</string>
    <string name="status_change_summary">(Acive, Cancelled, Landed, Schedulled, Deviated)</string>
    <string name="status_change">Status</string>
    <string name="terminal_change">Departure/Arrival terminal</string>
    <string name="door_change">Departure/Arrival gate</string>
    <string name="luggage_door_change">Luggage gate</string>
    <string name="hour_change">Departure/Arrival time</string>
    <string name="flight_number_input">Flight number</string>
    <string name="airline_input">Airline</string>
    <string name="add_to_my_flights">Add</string>
    <string name="flight_number">Flight Number: </string>
    <string name="departure_city">Departure: </string>
    <string name="arrival_city">Arrival: </string>
    <string name="flight_status">Status: </string>
    <string name="departure_airport_terminal">Departure Terminal: </string>
    <string name="arrival_airport_terminal">Arrival Terminal: </string>
    <string name="departure_airport_gate">Departure gate: </string>
    <string name="departure_scheduled_time">Departure hour: </string>
    <string name="arrival_airport_gate">Arrival gate: </string>
    <string name="arrival_scheduled_time">Arrival hour: </string>
    <string name="scheduled">Scheduled</string>
    <string name="active">Active</string>
    <string name="deviated">Deviated</string>
    <string name="landed">Landed</string>
    <string name="cancelled">Cancelled</string>
    <string name="unknown">Uknown</string>
    <string name="no_internet_connection">Internet connection failed</string>
    <string name="invalid_airline">Invalid Airline</string>
    <string name="flight">Flight: </string>
    <string name="n_a">Not Announced</string>
    <string name="details">Details</string>
    <string name="food_rating_text">Food:</string>
    <string name="kindness_rating_text">Kindness:</string>
    <string name="punctuality_rating_text">Punctuality:</string>
    <string name="millage_program_rating_text">Frequent-flyer program:</string>
    <string name="comfort_rating_text">Comfort:</string>
    <string name="price_quality_relation_rating_text">Price-Quality relation:</string>
    <string name="recommend_switch_text">Recommend:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="comment_text">Comment</string>
    <string name="comment_row_text">Comment:</string>
    <string name="add_comment">add comment</string>
    <string name="remove_flight_toast">Flight removed</string>
    <string name="get_fligh_error">Invalid flight</string>
    <string name="already_added">Flight already added</string>
    <string name="see_comments">Comments</string>
    <string name="comment_added">Comment added</string>
    <string name="saving_changes">Saving changes</string>
    <string name="new_status">The new status is:</string>
    <string name="new_departure_hour">The new departure hour is:</string>
    <string name="new_departure_terminal">The new departure terminal is:</string>
    <string name="new_departure_gate">The new departure gate is:</string>
    <string name="new_baggage_gate">The new luggage door is:</string>
    <string name="new_arrival_hour">The new arrival hour is:</string>
    <string name="new_arrival_terminal">The new arrival terminal is:</string>
    <string name="new_arrial_gate">The new arrival gate is:</string>
    <string name="main_button_resultssearch">Deal Results</string>
    <string name="search_view_text">Search deals by destination</string>
    <string name="deal">Deal: </string>
    <string name="price">Price: </string>
    <string name="no_deals">No deals to show</string>
    <string name="no_deals_found">There are no deals for the chosen destination</string>
    
    <string name="add_deal_text">Add deal</string>

</resources>