<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <EditText
            android:id="@+id/flight_number_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/flight_number_input"
            android:inputType="number" >
            <requestFocus />
        </EditText>
        <AutoCompleteTextView
            android:id="@+id/airline_input"
            android:gravity="left"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/flight_number_input"
            android:layout_below="@+id/flight_number_input"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/airline_input" />

        <Button
            android:id="@+id/add_flight_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_alignRight="@+id/airline_input"
            android:layout_below="@+id/airline_input"
        	android:background="#0C81C7"
            android:layout_marginTop="5dp"
            android:onClick="addFlight"
            android:textColor="#DDDDDD"
            android:text="@string/add_to_my_flights" />

    </RelativeLayout>

