<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/food_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/food_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/kindness_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kindness_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/kindness_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/punctuallity_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/punctuality_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/punctuallity_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/millage_program_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/millage_program_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/millage_program_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/comfort_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comfort_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/comfort_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/price_quality_relation_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_quality_relation_rating_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/price_quality_relation_row_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/recommend_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend_switch_text"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/recommend_row_text_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/comment_row_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_row_text"
                    android:textColor="#0C81C7" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/vertical_divider_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vertical_bar" />

        <TextView
            android:id="@+id/general_ranking_row_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.58"
            android:gravity="center"
            android:textColor="#0C81C7"
            android:textSize="100dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/comment_row_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>