<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/relativeLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/airline_image_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/departure_text"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/departure_city"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/arrival_text"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/arrival_city"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/departure_scheduled_text"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/departure_scheduled_time"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/arrival_scheduled_text"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/arrival_scheduled_time"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/price_text"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/price"
                    android:textColor="#0C81C7" />

                <TextView
                    android:id="@+id/add_deal_text"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:text="@string/add_deal_text"
                    android:textColor="#0C81C7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/from"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5sp"
                    android:textColor="#555" />

                <TextView
                    android:id="@+id/to"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/from"
                    android:textColor="#555" />

                <TextView
                    android:id="@+id/depDate"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/to"
                    android:textColor="#555" />

                <TextView
                    android:id="@+id/retDate"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/depDate"
                    android:textColor="#555" />

                <TextView
                    android:id="@+id/price"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/retDate"
                    android:textColor="#555" />

                <ImageView
                    android:id="@+id/button_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/yes" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>